unpackaged/main/default/objects/Customer_Reference__c/Customer_Reference__c.object-meta.xml
<CustomObject>
    <label>Customer Reference</label>
    <nameField>
        <label>Customer Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>