unpackaged/main/default/objects/Customer_Reference__c/fields/Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Activity_Category__c</fullName>
    <label>Activity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gifting Campaign</fullName>
            </value>
            <value>
                <fullName>VIP Access/Experience</fullName>
            </value>
            <value>
                <fullName>Hackathon</fullName>
            </value>
            <value>
                <fullName>Brand Spotlight</fullName>
            </value>
            <value>
                <fullName>Event or Webinar Speaker</fullName>
            </value>
            <value>
                <fullName>PR/AR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Opportunity Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>