unpackaged/main/default/objects/Customer_Reference__c/fields/Activity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Activity_Detail__c</fullName>
    <label>Activity Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>