unpackaged/main/default/objects/Customer_Reference__c/fields/Activity_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subcategory__c</fullName>
    <label>Activity Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target Account Swag Kit (Exec Buyer)</fullName>
            </value>
            <value>
                <fullName>Target Account Swag Kit (Champion)</fullName>
            </value>
            <value>
                <fullName>Customer Advisory Board</fullName>
            </value>
            <value>
                <fullName>Customer Dinner</fullName>
            </value>
            <value>
                <fullName>Account Experience/Event</fullName>
            </value>
            <value>
                <fullName>Retool-sponsored (marketing supported)</fullName>
            </value>
            <value>
                <fullName>Retool-included (marketing supported)</fullName>
            </value>
            <value>
                <fullName>Enterprise Customer Success Story</fullName>
            </value>
            <value>
                <fullName>Flagship Customer Film</fullName>
            </value>
            <value>
                <fullName>User event - Featured Customer / Brand</fullName>
            </value>
            <value>
                <fullName>Roadshow - customer speaker / presenter</fullName>
            </value>
            <value>
                <fullName>User event - mainstage keynote speaker</fullName>
            </value>
            <value>
                <fullName>3rd party event - co-presenter, co-marketer (booth)</fullName>
            </value>
            <value>
                <fullName>User Meetup - content partner</fullName>
            </value>
            <value>
                <fullName>Fireside chat - participant</fullName>
            </value>
            <value>
                <fullName>SME Panelist - virtual or live (webinar, roadshow, meetup event)</fullName>
            </value>
            <value>
                <fullName>Meetups -  sponsor or session leader</fullName>
            </value>
            <value>
                <fullName>Analyst Report contributor - customer testimonial, quote, survey</fullName>
            </value>
            <value>
                <fullName>Customer quote (press announcement)</fullName>
            </value>
            <value>
                <fullName>Industry roundup (press mentions/name drops for Mfg customers, for ex or Finserv)</fullName>
            </value>
            <value>
                <fullName>Tier 1 Press (stand-alone press feature, focusing one one customer/story)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>