unpackaged/main/default/objects/Customer_Reference__c/fields/Contact_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Contact_LinkedIn__c</fullName>
    <formula>Contact__r.LinkedIn_Manual_Entry__c</formula>
    <label>Contact LinkedIn</label>
    <type>Text</type>
</CustomField>