unpackaged/main/default/objects/Customer_Reference__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact__r.FirstName &amp;&quot; &quot;&amp; Contact__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>