unpackaged/main/default/objects/Customer_Reference__c/fields/Detailed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Notes__c</fullName>
    <label>Detailed Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>