unpackaged/main/default/objects/Customer_Reference__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <formula>IF(
CASE(  Status__c ,
&quot;Completed&quot;, 1,
&quot;Rejected&quot;, 1,
&quot;Canceled&quot;, 1,
0) =1, TRUE, FALSE)</formula>
    <label>Is Closed?</label>
    <type>Checkbox</type>
</CustomField>