unpackaged/main/default/objects/Customer_Reference__c/fields/Link_to_Asset__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Asset__c</fullName>
    <inlineHelpText>Link to the case study, or speaker presentation, or video, etc. For quick reference</inlineHelpText>
    <label>Link to Asset</label>
    <type>Url</type>
</CustomField>