unpackaged/main/default/objects/Customer_Reference__c/fields/Pause_Until__c.field-meta.xml
<CustomField>
    <fullName>Pause_Until__c</fullName>
    <label>Pause Until</label>
    <type>Date</type>
</CustomField>