unpackaged/main/default/objects/Customer_Reference__c/fields/Submitted_By_Manager__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_References_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>