unpackaged/main/default/objects/Customer_Reference__c/fields/Submitted_By_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Manager_Role__c</fullName>
    <label>Submitted By Manager Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>