unpackaged/main/default/objects/Customer_Reference__c/fields/Submitted_By_Segment__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Segment__c</fullName>
    <label>Submitted By Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>