unpackaged/main/default/objects/Customer_Reference__c/fields/Submitted_By_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Subteam__c</fullName>
    <label>Submitted By Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>