unpackaged/main/default/objects/Customer_Reference__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <formula>DATEVALUE( Submitted_At__c )</formula>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>