unpackaged/main/default/objects/Customer_Reference__c/fields/Submitted_Month__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Month__c</fullName>
    <formula>DATE(YEAR( Submitted_Date__c ),MONTH(Submitted_Date__c),1)</formula>
    <label>Submitted Month</label>
    <type>Date</type>
</CustomField>