unpackaged/main/default/objects/Customer_Reference__c/validationRules/Require_Pause_Until_Date_on_Paused.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Pause_Until_Date_on_Paused</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( Status__c ) = &quot;Paused&quot;,
ISBLANK( Pause_Until__c )
)</errorConditionFormula>
    <errorMessage>To set a Reference as Paused, please ensure you populate the Pause Until Date</errorMessage>
</ValidationRule>