unpackaged/main/default/objects/Customer_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Activity_Category__c</columns>
    <columns>Activity_Subcategory__c</columns>
    <columns>Activity_Detail__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Submitted_At__c</columns>
    <columns>Account__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Trigger__c</columns>
    <filterScope>Everything</filterScope>
    <label>All References</label>
</ListView>