unpackaged/main/default/objects/Customer_Reference__c/listViews/Closed_References.listView-meta.xml
<ListView>
    <fullName>Closed_References</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Activity_Category__c</columns>
    <columns>Activity_Subcategory__c</columns>
    <columns>Account__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Trigger__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Closed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Closed References</label>
</ListView>