unpackaged/main/default/objects/Customer_Reference__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Activity_Category__c</columns>
    <columns>Activity_Subcategory__c</columns>
    <columns>Account__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Pause_Until__c</columns>
    <columns>Status_Notes__c</columns>
    <columns>Trigger__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted,Paused,In Progress,Active</value>
    </filters>
    <label>In Progress</label>
</ListView>